[package]
name = "can-blf-parser"
version = "0.1.0"
edition = "2021"
description = "Ultra-fast BLF + DBC parser compiled to WebAssembly (universal, multi-DBC, multi-channel)."
license = "MIT"
authors = ["Saurabh Ravi <saurabh.awarhi@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# BLF parsing
ablf = "0.2"

# DBC parsing & decoding
can-dbc = "6.0"

# CSV export
csv = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.5"

[features]
default = []

[profile.release]
# Optimizations for ultra-fast parsing (10M frames in ~1s)
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
